# flutter_rust_example

./: .gitignore  README.md  pubspec.yaml
lib/: bridge_generated.dart  main.dart
rust/: Cargo.toml
rust/src/: api.rs  bridge_generated.rs
