[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flutter_rust_bridge = "1.63.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"